--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ./.idea
-./Соболь
+./Войтович
 ./Воронов
 ./Говша
 ./Гоков
@@ -24,6 +24,7 @@
 ./Соколова
 ./Терешко
 ./Чирич
-./Шамрило
+./Соболь
 ./Шепелевский
 ./гичан
+./.gitignore
